--- a/SearchEngine.App/StylesMainWindow.xaml
+++ b/SearchEngine.App/StylesMainWindow.xaml
@@ -1,18 +1,143 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+
+    <!-- * -->
+    <Style x:Key="StyleDefault" TargetType="Control">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Padding" Value="5"/>
+    </Style>
+
+    <!-- CONTENT PRESENTER -->
+    <Style x:Key="StyleContentPresenter" TargetType="ContentPresenter">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
+    <!-- BORDER -->
+    <Style x:Key="StyleBorder" TargetType="Border">
+        <Setter Property="CornerRadius" Value="10"/>
+        <Setter Property="BorderThickness" Value="2"/>
+    </Style>
+
+    <Style x:Key="StyleBorderGreen" TargetType="Border"
+           BasedOn="{StaticResource StyleBorder}">
+        <Setter Property="BorderBrush" Value="Green"/>
+        <Setter Property="Background" Value="LightGreen"/>
+    </Style>
+    <Style x:Key="StyleBorderRed" TargetType="Border"
+           BasedOn="{StaticResource StyleBorder}">
+        <Setter Property="BorderBrush" Value="Red"/>
+        <Setter Property="Background" Value="LightSalmon"/>
+    </Style>
+    <Style x:Key="StyleBorderBlue" TargetType="Border"
+           BasedOn="{StaticResource StyleBorder}">
+        <Setter Property="BorderBrush" Value="Blue"/>
+        <Setter Property="Background" Value="LightBlue"/>        
+    </Style>
+
+    <!-- BUTTON -->
+    <Style x:Key="StyleDefaultButton" TargetType="Button"
+           BasedOn="{StaticResource StyleDefault}">
+        <Style.Setters>
+            <Setter Property="Width" Value="120"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style.Setters>
+        
+        <Style.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsEnabled" Value="True"/>
+                    <Condition Property="IsMouseOver" Value="True"/>
+                </MultiTrigger.Conditions>
+                <MultiTrigger.Setters>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                </MultiTrigger.Setters>
+            </MultiTrigger>
+
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="StyleButtonStart" TargetType="Button"
+           BasedOn="{StaticResource StyleDefaultButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Style="{StaticResource StyleBorderGreen}">
+                        <ContentPresenter Style="{StaticResource StyleContentPresenter}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="StyleButtonPause" TargetType="Button"
+           BasedOn="{StaticResource StyleDefaultButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Style="{StaticResource StyleBorderBlue}">
+                        <ContentPresenter Style="{StaticResource StyleContentPresenter}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+     <Style x:Key="StyleButtonStop" TargetType="Button"
+           BasedOn="{StaticResource StyleDefaultButton}">
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Style="{StaticResource StyleBorderRed}">
+                        <ContentPresenter Style="{StaticResource StyleContentPresenter}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+     </Style>
+    
+    
+      <Style x:Key="StyleButtonChoose" TargetType="Button"
+           BasedOn="{StaticResource StyleDefaultButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Style="{StaticResource StyleBorderBlue}">
+                        <ContentPresenter Style="{StaticResource StyleContentPresenter}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+         <Setter Property="Width" Value="60"/>
+         <Setter Property="HorizontalAlignment" Value="Right"/>
+    </Style>   
+
+
+
+
+
+
     <Style x:Key="MainPanel" TargetType="WrapPanel">
         <Setter Property="Orientation" Value="Horizontal"/>
 
     </Style>
-    
-   
-    
+
+    <Style x:Key="DirToSearchTextBox" TargetType="TextBox"
+           BasedOn="{StaticResource StyleDefault}">
+        <Setter Property="HorizontalAlignment" Value="Left"/>        
+        <Setter Property="Width" Value="300"/>
+        <Setter Property="TextWrapping" Value="NoWrap"/>
+
+    </Style>
 
 
-    <Style x:Key="ReportWindowTextBox" TargetType="TextBox">
-        <Setter Property="Background" Value="Gray"/>
-        <Setter Property="Margin" Value="10,10,10,10"/>
+
+    <Style x:Key="ReportWindowTextBox" TargetType="TextBox" BasedOn="{StaticResource StyleDefault}">
+        <Setter Property="Background" Value="LightGray"/>
 
 
     </Style>
